--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# claude
+.claude/
+CLAUDE.md
+
+# serwist (generated service worker)
+public/sw.js
+public/sw.js.map
+public/serwist-build-manifest.json
