--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:tunnel": "next dev --turbopack -H 0.0.0.0 -p 47832",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
